plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.5'
    id 'io.spring.dependency-management' version '1.1.3'
    id 'io.freefair.lombok' version "8.4"
}

group = 'hu.bca'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = "17"
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.xerial:sqlite-jdbc:3.43.2.2'
    implementation 'org.slf4j:slf4j-api:2.0.7'
    implementation 'org.hibernate.orm:hibernate-community-dialects'
    implementation 'org.projectlombok:lombok:1.18.28'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.0.6'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}
